--- a/04-ms-marinebiology.qmd
+++ b/04-ms-marinebiology.qmd
@@ -1,10 +1,10 @@
+# MS Marine Biology
+
+## Program Description 
 
 
-# Program Description 
+## Learning Outcomes
 
 
-# Learning Outcomes
-
-
-# Program Requirements and Timeline
+## Program Requirements and Timeline
 
