--- a/07-phd-integrativebiology.qmd
+++ b/07-phd-integrativebiology.qmd
@@ -1,10 +1,10 @@
+# PhD Integrative Biology
+
+## Program Description 
 
 
-# Program Description 
+## Learning Outcomes
 
 
-# Learning Outcomes
-
-
-# Program Requirements and Timeline
+## Program Requirements and Timeline
 
