--- a/08-ms-neurosciencebehavior.qmd
+++ b/08-ms-neurosciencebehavior.qmd
@@ -1,10 +1,10 @@
+# MS Neuroscience & Behavior
+
+## Program Description 
 
 
-# Program Description 
+## Learning Outcomes
 
 
-# Learning Outcomes
-
-
-# Program Requirements and Timeline
+## Program Requirements and Timeline
 
