--- a/10-funding.qmd
+++ b/10-funding.qmd
@@ -1,4 +1,4 @@
-# Grants {#grants}
+# Funding {#funding}
 
 ## General lists of resources/databases
 - [General UNH page for finding funding and building grant-writing skills](https://www.unh.edu/research/research/research-development-resources)
