--- a/11-finishing.qmd
+++ b/11-finishing.qmd
@@ -1,4 +1,4 @@
-# Offboarding {#offboarding}
+# Finishing {#finishing}
 
 Here is a brief summary of the offboarding process (but it looks slightly different for different positions).
 
