--- a/05-phd-marinebiology.qmd
+++ b/05-phd-marinebiology.qmd
@@ -1,10 +1,10 @@
+# PhD Marine Biology
+
+## Program Description 
 
 
-# Program Description 
+## Learning Outcomes
 
 
-# Learning Outcomes
-
-
-# Program Requirements and Timeline
+## Program Requirements and Timeline
 
