--- a/02-admissions.qmd
+++ b/02-admissions.qmd
@@ -1,5 +1,11 @@
 # Admissions
 
+## Admissions Cycle
+
+Most students start our programs in Fall, but Spring and Summer starts are sometimes considered. Typically, prospective graduate students begin reaching out to our faculty the summer or Fall before they intend to apply. Early conversation helps with planning as faculty have to secure funds to support students. 
+
+Priority will be given to students that apply by our [December deadlines]((https://colsa.unh.edu/biological-sciences/academics)). A departmental admissions committee reviews applications through December and January. Typically, we start making offers around mid February. Students have until April 15th to formally accept or decline our offer. Between mid Feb and Apr, we may make additional offers as students accept or decline and if new funding becomes available.
+
 ## Prospective Students
 
 Please consider watching this webinar recording that provides an introduction to graduate school in general and information about our specific programs. The webinar also includes a Q&A with current graduate students.
