--- a/04-ms-marinebiology.qmd
+++ b/04-ms-marinebiology.qmd
@@ -8,3 +8,7 @@
 
 ## Program Requirements and Timeline
 
+
+### Committee
+
+Committees are comprised of three people: your advisor, another DBS faculty member, and someone external to the department.
