--- a/05-phd-marinebiology.qmd
+++ b/05-phd-marinebiology.qmd
@@ -8,3 +8,8 @@
 
 ## Program Requirements and Timeline
 
+
+### Committee
+
+Committees are comprised of five people: your advisor, another DBS faculty member, and three additional people. At least two committee members must be external to DBS. Members of UNH must be part of the graduate faculty (which is an easy application if they aren't already graduate faculty). For non-UNH members, you must submit a CV on their behalf. All committee members should have a PhD or commensurate experience.
+
