--- a/03-onboarding.qmd
+++ b/03-onboarding.qmd
@@ -23,6 +23,26 @@ Let's extract info from (https://colsa.unh.edu/sites/default/files/media/2024-07
 - [How to manage your supervisor](https://www.science.org/content/article/how-get-what-you-need-your-phd-or-postdoc-supervisor)
 
 
+### Required training
+
+The [UNH Responsible Conduct of Research and Scholarly Activity (RCR)](https://www.unh.edu/research/research/compliance-safety/responsible-conduct-research-scholarly-activity/rcr-training-unh) Committee announces the availability of training in the ethical and responsible conduct of research.
+ 
+The training fulfills:
+The National Science Foundation (NSF) mandate that all postdoctoral researchers, and undergraduate and graduate students supported by NSF to conduct research on proposals submitted on or after January 4, 2010, receive appropriate training in the ethical and responsible conduct of research. Effective with proposals submitted to NSF on or after 7/31/2023, faculty and other senior personnel will be required to complete responsible and ethical conduct of research training. Click here for details about UNH's RCR training requirements for the different audiences. 
+The United States Department of Agriculture (USDA) National Institute of Food and Agriculture (NIFA) RCR requirement. Click here for details about UNH's RCR training requirements for different audiences.
+ 
+This training opportunity involves two components:
+Completion of a web-based RCR course (available here), followed by
+Participation in a seminar on Friday, February 27, 2026, 1:10 – 4:00 pm via Zoom.
+Modules must have been completed prior to participation in the seminar. Successful completion of the training requires completion of both components.
+
+Registration for the seminar is required: Individuals must register for the seminar by Thursday, February 19, 2026. Registration information is available [here](https://www.unh.edu/research/research/compliance-safety/responsible-conduct-research-scholarly-activity/rcr-training-unh). 
+ 
+This training is open to any member of the UNH community. While it is primarily directed at postdoctoral researchers, graduate students, and undergraduate students, faculty and staff are invited to participate.
+ 
+For more information, please contact [Julie Simpson in Research Integrity Services](https://www.unh.edu/research/research/compliance-safety/responsible-conduct-research-scholarly-activity/rcr-training-unh). Thank you.
+
+
 
 
 
