--- a/01-program-overview.qmd
+++ b/01-program-overview.qmd
@@ -19,3 +19,18 @@ Easton R. White, Ph.D.
 Chair, Graduate Program Committee 
 
 
+---
+
+As a department, we voted to adopt the [Healthy Research Teams & Labs framework](https://cgsnet.org/resources/toolkits/healthy-labs-and-research-teams) where we agree to the following seven principles.
+
+1. Setting clear expectations for advising and mentorship and engaging in practices that help foster positive, productive, and fulfilling relationships. We recognize the importance of supportive advisory relationships in facilitating personal, academic, and professional development of research team members.  
+2. Creating an environment where the welfare of all research team members is prioritized. We recognize that our research team’s best work is more likely to be achieved when members feel welcome, supported, and encouraged to strive toward professional and personal goals.  
+3. Explicitly stating our commitment to fair practices. We recognize that clearly stating our commitment helps to ensure graduate students are given fair attention and opportunities.  
+4. Encouraging collaboration rather than competition within our research teams and labs. We understand the important role that a collaborative and supportive environment has in fostering success and well-being of research team members.  
+5. Engaging in continual learning to refine skills in research leadership and management. We recognize the importance of elevating our advising and mentorship, research management, and leadership skills through ongoing professional development.  
+6. Promoting professional development opportunities for a variety of career paths. We understand graduate students have diverse career aspirations and we play a significant role in encouraging them to engage in a variety of professional development activities.  
+7. Encouraging students to be curious, innovative, and open in their work. We understand that research integrity and rigor can be achieved when students are encouraged to be curious, collaborative, and open throughout the research process.  
+
+
+
+
