--- a/04-ms-marinebiology.qmd
+++ b/04-ms-marinebiology.qmd
@@ -12,3 +12,101 @@
 ### Committee
 
 Committees are comprised of three people: your advisor, another DBS faculty member, and someone external to the department.
+
+### Thesis Proposal Guidelines
+PURPOSE 
+A thesis proposal states a problem to be investigated and describes how the research will be performed and reported. An approved thesis proposal documents an agreement between the student and the Marine Biology Graduate Program regarding the contents of a satisfactory thesis or dissertation. The preparation and writing of the thesis are of utmost importance and the student is expected to seek the guidance of their major professor and committee in the formation of the final thesis product. Adherence to the guidelines given here should assure the student that all information necessary for the satisfactory evaluation of the plans for master's or doctoral research will be included in the proposal. 
+ 
+
+FORMAT 
+The thesis proposal should present the required information concisely and clearly. The ability to describe concisely a research problem and methodology is one of the skills that the proposal process is designed to develop. Therefore, all thesis proposals are limited in length to the signature coversheet plus 20 or fewer double-spaced, single-sided or double-sided, numbered pages in a font size no smaller than 12 point. Proposals longer than this will not be accepted, however, appendices and references are not included in the 15-page limit, and must be numbered separately, using lower-case Roman numerals.  
+
+ 
+
+CONTENTS 
+Thesis Proposals shall contain the following sections, presented in the order shown: 
+
+ 
+A. Title of the Study 
+This is the title as the student conceives it at the time the proposal is submitted. This title must match the title on the thesis proposal approval form. As the research develops, minor rephrasing of the title may prove better suited to the work. In such cases, the most satisfactory one will be used for the thesis, but in no case will a title that deviates substantially from the one approved in the original proposal be approved unless a revised proposal with the new title has already been approved. Any title used must be consistent with the contents and subject of the thesis. 
+
+ 
+B. Statement of the Problem 
+Limit the statement, if possible, to two or three sentences, and note in precise language exactly what is to be investigated. To amplify the statement, it is usually desirable to list: 
+
+The scope or limitations of the problem; 
+
+Either one or more hypotheses the research seeks to test, or the objectives expected 
+ 
+
+C. Justification for and Significance of the Study 
+This section of the proposal includes: 
+
+A brief statement of the reason for the selection of the problem; 
+
+The relation of the principal literature to the proposal; 
+
+An explanation of the study’s importance to the advancement of knowledge and its significance to the student. 
+
+The problem selected should be substantial enough to constitute a good example of a 
+report of a scholarly investigation. At the PhD level the work should constitute a significant 
+increase in the pool of knowledge. 
+
+ 
+D. Methodology or Procedures 
+This section describes the activities necessary to achieve the objectives. Methods should flow naturally from the problems and objectives, and may include depending on the field of study: 
+
+A research design;  
+
+General characteristics of the study population;  
+
+Location or setting in which the study will take place, calendar events in carrying out the study; Sampling design and procedures;  
+
+Data collection schedule;  
+
+Brief description of instruments and tools for collecting data (validity, reliability, and pretesting of the data collecting instruments);  
+
+Definition of the most important terms and concepts;  
+
+Data processing procedures and procedures of data analysis as appropriate. 
+
+ 
+E. Broader Impacts 
+
+In this section the student should put the potential findings of their research into a broader context. Some questions to address in this section: 
+
+What is the intellectual merit of doing this study?  
+
+How will the field of knowledge around your thesis topic be moved forward upon completion of your work? 
+
+Why will the scientific community and society at large care about the outcomes of your research?  
+
+ 
+F. Literature Cited in the Proposal 
+It is important that students demonstrate that they have investigated the literature in framing the problem to be studied. 
+
+ 
+
+G. Appendix 
+
+Appendices can be listed after the Literature Cited section. In these appendices students should include information that is outside the scope of the thesis proposal. These items may include: 
+
+Extended methodologies 
+
+Preliminary data 
+
+IACUC or IRB approval documents 
+
+ 
+TIMING 
+Thesis proposals should be submitted before substantial research has been completed. Typically, it should be submitted before or during the first semester in which the student registers for research credits. In all cases, however, the proposal must be submitted at least one semester before the semester in which the thesis itself is to be submitted and defended. For dissertations, the proposal must be submitted at least six (6) months prior to the defense. 
+ 
+
+Students must submit an MBGP Proposal Approval form, with the required signatures, along with the proposal to the MBGP Coordinator. Please only send electronic copies of these documents. 
+
+ 
+
+REVISED PROPOSALS 
+If, as the research proceeds, a significant change in subject or methodology becomes 
+necessary, a revised proposal should be submitted. Sometimes an abbreviated format can 
+be used for such changes. The student, in consultation with their major professor, should contact the MBGP Coordinator for further guidance. 
