--- a/01-program-overview.qmd
+++ b/01-program-overview.qmd
@@ -32,5 +32,29 @@ As a department, we voted to adopt the [Healthy Research Teams & Labs framework]
 7. Encouraging students to be curious, innovative, and open in their work. We understand that research integrity and rigor can be achieved when students are encouraged to be curious, collaborative, and open throughout the research process.  
 
 
+---
+#Summary of Shared Requirements
+M.S. Degree:
+o	30 credit hours total, with 10 maximum being research credit
+o	Thesis proposal, OKed by thesis committee
+o	Public presentation and thesis defense with committee
+
+
+Ph.D. Degree:
+o	Variable credit hours dependent on program, and guidance committee recommendations
+o	Thesis proposal, OKed by thesis committee
+o	Written and oral comprehensive exams
+o	Public presentation and dissertation defense with committee
+
+
+The M.S. degree should normally be completed in two years. The University requires that all graduate work for any master's degree must be completed within six years from the date of enrollment in the program. 
+
+The Ph.D. degree should normally be completed within five years (three years for students entering with a master’s degree). All graduate work for the Ph.D. must be completed within eight years of enrollment, or within seven years if the student entered with a master's degree in the same field. Per University policy, the student must be advanced to candidacy within five years after enrollment or within four years if the student entered with a master's in the same field. In DBS, we encourage students to advance to candidacy in the second or third year. 
+Students and research projects do not all progress at the same pace. The timelines are offered as a guide, but departure from them is permissible when circumstances warrant. There are, however, some firm Graduate School deadlines that must be adhered to: see https://gradschool.unh.edu/academics/graduate-school-academic-calendar  for details.
+
+
+
+
+
 
 
